2006-04-03  Noah Misch  <noah@cs.caltech.edu>

	* lib/autoconf/general.m4 (AC_CACHE_SAVE): Use AC_MSG_NOTICE.

2006-04-03  Eric Blake  <ebb9@byu.net>

	* THANKS: Add myself.

2006-04-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autotest/general.m4 (AT_INIT): Add `at_testdir' to pointer
	to log, point to testsuite output tree.

2006-04-02  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: AC_PROG_CC and AC_PROG_CXX no longer declare 'exit'.
	* doc/autoconf.texi (Function Portability): Mention that C++
	has trouble with 'exit'.
	(Guidelines): Test programs shouldn't use 'exit'.
	* lib/autoconf/c.m4 (_AC_PROG_CXX_EXIT_DECLARATION):
	Remove; all uses removed.
	(AC_LANG_INT_SAVE(C), AC_C_BIGENDIAN):
	Return from 'main' instead of calling 'exit'.
	* lib/autoconf/functions.m4 (_AC_LIBOBJ_ALLOCA, AC_FUNC_CLOSEDIR_VOID):
	(_AC_FUNC_FNMATCH_IF, AC_FUNC_GETGROUPS):
	(AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK, _AC_FUNC_MALLOC_IF):
	(AC_FUNC_MEMCMP, AC_FUNC_MKTIME, AC_FUNC_MMAP, _AC_FUNC_REALLOC_IF):
	(AC_FUNC_SETPGRP, _AC_FUNC_STAT, AC_FUNC_STRTOD, AC_FUNC_STRERROR_R):
	(AC_FUNC_STRNLEN, AC_FUNC_SETVBUF_REVERSED, AC_FUNC_UTIME_NULL):
	(_AC_FUNC_FORK, _AC_FUNC_VFORK, AC_FUNC_WAIT3): Likewise.
	* lib/autoconf/headers.m4 (AC_HEADER_STDC): Likewise.
	* lib/autoconf/specific.m4 (AC_SYS_RESTARTABLE_SYSCALLS): Likewise.
	* lib/autoconf/types.m4 (AC_TYPE_GETGROUPS): Likewise.
	* tests/compile.at: Likewsie.

2006-04-02  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/c.m4 (AC_PROG_CC, AC_PROG_CXX, AC_PROG_OBJC): Call
	  _AC_COMPILER_EXEEXT instead of m4_expand_once([_AC_COMPILER_EXEEXT])
	* lib/autoconf/fortran.m4 (_AC_PROG_FC): Likewise.
	* lib/autoconf/lang.m4 (_AC_COMPILER_EXEEXT_TESTS): On subsequent
	  calls, for a new language, only check that the compiler works.
	(AC_NO_EXECUTABLES): Change the redefinition of
	  _AC_COMPILER_EXEEXT_TESTS so that on subsequent calls, it checks
	  that the new language's compiler works if ac_no_link=no, and
	  does nothing otherwise.
